--- a/components.json
+++ b/components.json
@@ -15,7 +15,8 @@
     "utils": "@/lib/utils",
     "ui": "@/components/ui",
     "lib": "@/lib",
-    "hooks": "@/hooks"
+    "hooks": "@/hooks",
+    "types" : "@/lib/types"
   },
   "iconLibrary": "lucide"
 }
